overhauled page due to original layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,10 +113,7 @@ header {
     text-decoration: none;
   }
 
-  .profile-pic {
-    border: 5px var(--primary-color);
-
-  }
+  
 
  .article h2 {
      margin: auto;
